--- a/BaiTap/app/src/main/res/layout/activity_main.xml
+++ b/BaiTap/app/src/main/res/layout/activity_main.xml
@@ -1,205 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/drawer_layout"
     tools:context=".activity.MainActivity"
     android:orientation="vertical">
-    <!--Name of shop-->
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/tvShopName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:fontFamily="@font/cookie"
-            android:text="Youth Memories"
-            android:textColor="@color/black"
-            android:textSize="50dp"
-            android:textStyle="bold"/>
-        <!--Reset after filter-->
-        <ImageButton
-            android:id="@+id/Resetbtn"
-            android:layout_toStartOf="@+id/addProductBtn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            app:srcCompat="@drawable/ic_baseline_refresh_24"
-            tools:ignore="VectorDrawableCompat"
-            android:background="@null"/>
-        <!--Button Edit-->
-        <ImageButton
-            android:id="@+id/editProfileBtn"
-            android:layout_alignParentEnd="true"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            app:srcCompat="@drawable/ic_account_settings"
-            tools:ignore="VectorDrawableCompat"
-            android:background="@null"/>
-        <!--Button Add Product-->
-        <ImageButton
-            android:id="@+id/addProductBtn"
-            android:layout_toStartOf="@+id/editProfileBtn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            app:srcCompat="@drawable/ic_cart_black"
-            tools:ignore="VectorDrawableCompat"
-            android:background="@null"/>
-    </RelativeLayout>
-    <!--Advertise-->
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="150dp">
-        <!--Girl-->
-        <ViewFlipper
-            android:id="@+id/view_flipper"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitCenter"
-                android:src="@drawable/maxi" />
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitCenter"
-                android:src="@drawable/whitemaxi" />
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitCenter"
-                android:src="@drawable/set" />
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitCenter"
-                android:src="@drawable/somi" />
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitCenter"
-                android:src="@drawable/shortnu" />
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitCenter"
-                android:src="@drawable/damtieuthu" />
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitCenter"
-                android:src="@drawable/khoacden" />
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitCenter"
-                android:src="@drawable/khoacvang" />
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitCenter"
-                android:src="@drawable/naucafe" />
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitCenter"
-                android:src="@drawable/shortden" />
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitCenter"
-                android:src="@drawable/xanhden" />
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitCenter"
-                android:src="@drawable/quandai" />
-
-        </ViewFlipper>
-    </RelativeLayout>
-    <!--Main-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <!--Show Products-->
+        <include
+            layout="@layout/main_toolbar"/>
+        <!--Advertise-->
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <!--Products-->
-            <RelativeLayout
-                android:id="@+id/RLProducts"
+            <!--Girl-->
+            <ViewFlipper
+                android:id="@+id/view_flipper"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <!--Search Product-->
-                <EditText
-                    android:id="@+id/btnSearch"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_toStartOf="@+id/filterProductBtn"
-                    android:background="@drawable/search_bg"
-                    android:drawableLeft="@drawable/ic_search_black_24dp"
-                    android:drawablePadding="10dp"
-                    android:hint="Search something..."
-                    android:padding="10dp"
-                    android:inputType="textVisiblePassword"/>
-                <!--Filter Product-->
-                <ImageButton
-                    android:id="@+id/filterProductBtn"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:background="@null"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/ic_filter_list"/>
-
-                <TextView
-                    android:id="@+id/filterTV"
-                    android:layout_width="140dp"
-                    android:layout_height="30dp"
-                    android:layout_below="@+id/btnSearch"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
-                    android:fontFamily="@font/corben_bold"
-                    android:text="New Release"
-                    android:textColor="@color/black"
-                    android:textSize="14dp" />
-                <!--Show product-->
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/productShowRV"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp">
+                <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_below="@+id/filterTV"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginBottom="5dp"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:listitem="@layout/row_product_seller">
-                </androidx.recyclerview.widget.RecyclerView>
-            </RelativeLayout>
-            <!--Orders-->
-            <RelativeLayout
-                android:id="@+id/RLOrders"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-            </RelativeLayout>
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/maxi" />
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/whitemaxi" />
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/set" />
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/somi" />
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/shortnu" />
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/damtieuthu" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/khoacden" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/khoacvang" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/naucafe" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/shortden" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/xanhden" />
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/quandai" />
+
+            </ViewFlipper>
         </RelativeLayout>
     </LinearLayout>
-</LinearLayout>
+    <RelativeLayout
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/white">
+        <include
+            layout="@layout/main_nav_drawer"/>
+    </RelativeLayout>
 
+</androidx.drawerlayout.widget.DrawerLayout>
 
