--- a/BaiTap/app/src/main/res/layout/activity_user_profile.xml
+++ b/BaiTap/app/src/main/res/layout/activity_user_profile.xml
@@ -18,17 +18,56 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Profile" />
+                android:text="Profile"
+                android:textSize="50dp"
+                android:textAlignment="center"
+                android:textColor="@color/black"/>
+            <ImageView
+                android:src="@drawable/ic_user"
+                android:id="@+id/imageview"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="100dp"/>
+
+            <EditText
+                android:id="@+id/edittextuser"
+                android:layout_width="261dp"
+                android:layout_height="54dp"
+                android:layout_marginLeft="20dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="290dp"
+                android:drawablePadding="10dp"/>
+
+            <EditText
+                android:id="@+id/edittextname"
+                android:layout_width="261dp"
+                android:layout_height="54dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="360dp"
+                android:drawablePadding="20dp" />
+            <EditText
+                android:id="@+id/edittextemail"
+                android:layout_width="261dp"
+                android:layout_height="54dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="430dp"
+                android:drawablePadding="20dp" />
+
+
+
+
         </RelativeLayout>
+
 
     </LinearLayout>
 
-        <RelativeLayout
-            android:layout_width="300dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:background="@color/white">
-            <include layout ="@layout/main_nav_drawer"/>
-        </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/white">
+        <include layout ="@layout/main_nav_drawer"/>
+    </RelativeLayout>
 
 </androidx.drawerlayout.widget.DrawerLayout>
