--- a/BaiTap/app/src/main/res/layout/cart_item.xml
+++ b/BaiTap/app/src/main/res/layout/cart_item.xml
@@ -7,258 +7,42 @@
     android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/productImage"
-        android:layout_width="60dp"
-        android:layout_height="50dp"
+        android:layout_width="70dp"
+        android:layout_height="60dp"
         android:layout_gravity="center"
         android:src="@drawable/ic_shopping_cart">
     </ImageView>
-    <LinearLayout
-        android:layout_width="match_parent"
+   <LinearLayout
+       android:layout_width="wrap_content"
+       android:layout_height="match_parent"
+       android:orientation="vertical">
+       <TextView
+           android:id="@+id/nameproduct"
+           android:layout_width="250dp"
+           android:layout_height="wrap_content"
+           android:text="ProductName"
+           android:textAlignment="center"
+           android:layout_gravity="center"
+           android:textStyle="bold" />
+       <TextView
+           android:id="@+id/priceproduct"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="0.0 VND"
+           android:layout_gravity="center"/>
+   </LinearLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/nameproduct"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ProductName"
-            android:textAlignment="center"
-            android:textStyle="bold" />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="55dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="Size S: " />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="35dp"
-                        android:orientation="horizontal">
-
-                        <ImageButton
-                            android:id="@+id/minusProductS"
-                            android:layout_width="12dp"
-                            android:layout_height="12dp"
-                            android:layout_gravity="center"
-                            android:background="@null"
-                            android:clickable="true"
-                            android:src="@drawable/ic_minus" />
-
-                        <EditText
-                            android:id="@+id/edt_quantityProductS"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:inputType="number"
-                            android:minWidth="25dp"
-                            android:text=""
-                            android:enabled="false"
-                            android:textAlignment="center" />
-
-                        <ImageButton
-                            android:id="@+id/plusProductS"
-                            android:layout_width="12dp"
-                            android:layout_height="12dp"
-                            android:layout_gravity="center"
-                            android:background="@null"
-                            android:clickable="true"
-                            android:src="@drawable/ic_add" />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="55dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="Size M: " />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="35dp"
-                        android:orientation="horizontal">
-
-                        <ImageButton
-                            android:id="@+id/minusProductM"
-                            android:layout_width="12dp"
-                            android:layout_height="12dp"
-                            android:layout_gravity="center"
-                            android:background="@null"
-                            android:src="@drawable/ic_minus" />
-
-                        <EditText
-                            android:id="@+id/edt_quantityProductM"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:inputType="number"
-                            android:minWidth="25dp"
-                            android:enabled="false"
-                            android:text=""
-                            android:textAlignment="center" />
-
-                        <ImageButton
-                            android:id="@+id/plusProductM"
-                            android:layout_width="12dp"
-                            android:layout_height="12dp"
-                            android:layout_gravity="center"
-                            android:background="@null"
-                            android:src="@drawable/ic_add" />
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="55dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="Size L: " />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="35dp"
-                        android:orientation="horizontal">
-
-                        <ImageButton
-                            android:id="@+id/minusProductL"
-                            android:layout_width="12dp"
-                            android:layout_height="12dp"
-                            android:layout_gravity="center"
-                            android:background="@null"
-                            android:src="@drawable/ic_minus" />
-
-                        <EditText
-                            android:id="@+id/edt_quantityProductL"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:inputType="number"
-                            android:minWidth="25dp"
-                            android:enabled="false"
-                            android:text=""
-                            android:textAlignment="center" />
-
-                        <ImageButton
-                            android:id="@+id/plusProductL"
-                            android:layout_width="12dp"
-                            android:layout_height="12dp"
-                            android:layout_gravity="center"
-                            android:background="@null"
-                            android:src="@drawable/ic_add" />
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="55dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="Size XL: " />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="35dp"
-                        android:orientation="horizontal">
-
-                        <ImageButton
-                            android:id="@+id/minusProductXL"
-                            android:layout_width="12dp"
-                            android:layout_height="12dp"
-                            android:layout_gravity="center"
-                            android:background="@null"
-                            android:src="@drawable/ic_minus" />
-
-                        <EditText
-                            android:id="@+id/edt_quantityProductXL"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:inputType="number"
-                            android:enabled="false"
-                            android:minWidth="25dp"
-                            android:text=""
-                            android:textAlignment="center" />
-
-                        <ImageButton
-                            android:id="@+id/plusProductXL"
-                            android:layout_width="12dp"
-                            android:layout_height="12dp"
-                            android:layout_gravity="center"
-                            android:background="@null"
-                            android:src="@drawable/ic_add" />
-                    </LinearLayout>
-
-                </LinearLayout>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:orientation="vertical">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAllCaps="false"
-                        android:text="Price: "
-                        android:layout_gravity="center"
-                        android:textSize="18dp"/>
-                    <TextView
-                        android:id="@+id/priceproduct"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text=""
-                        android:textSize="18dp"/>
-                </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginLeft="110dp">
-            <ImageButton
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_recycle_bin"
-                android:backgroundTint="@color/white"
-                android:id="@+id/delete"/>
-        </RelativeLayout>
-    </LinearLayout>
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="center"
+        android:gravity="center">
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_recycle_bin"
+            android:backgroundTint="@color/white"
+            android:id="@+id/delete"/>
+    </RelativeLayout>
 
 </LinearLayout>
