--- a/BaiTap/app/src/main/res/layout/activity_changeinfor.xml
+++ b/BaiTap/app/src/main/res/layout/activity_changeinfor.xml
@@ -10,8 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <include
-            layout="@layout/main_toolbar"/>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -64,16 +63,31 @@
                 android:drawableRight="@drawable/ic_baseline_create_24"/>
 
             <Button
-                android:id="@+id/butndangnhap"
+                android:id="@+id/butnback"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="520dp"
+                android:layout_marginBottom="50dp"
+                android:background="@drawable/round_border"
+                android:text="Back"
+                app:backgroundTint="@color/teal_700" />
+
+            <Button
+                android:id="@+id/butnchangeinfor"
+
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginTop="600dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="50dp"
                 android:background="@drawable/round_border"
                 android:text="Change"
                 app:backgroundTint="@color/teal_700" />
-
-
 
 
         </RelativeLayout>
