--- a/BaiTap/app/src/main/res/layout/activity_changepass.xml
+++ b/BaiTap/app/src/main/res/layout/activity_changepass.xml
@@ -1,65 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:ignore="ExtraText"
-    android:orientation="vertical"
     android:id="@+id/drawer_layout"
     tools:context=".activity.ChangePassActivity">
-
-    <include layout="@layout/main_toolbar" />
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:text="Change Password"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="30dp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Change Password"
+                android:textSize="40dp"
+                android:textAlignment="center"
+                android:textColor="@color/black"/>
+            <ImageView
+                android:src="@drawable/ic_user"
+                android:id="@+id/imageview"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="100dp"/>
+            <EditText
+                android:id="@+id/edittextnewpassword"
+                android:layout_width="261dp"
+                android:layout_height="54dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="340dp"
+                android:drawablePadding="20dp"
+                android:hint="New password"
+                android:layout_centerHorizontal="true"
+                android:inputType="textPassword"
+                android:drawableRight="@drawable/ic_baseline_create_24"/>
+            <EditText
+                android:id="@+id/edittextconfirmpassword"
+                android:layout_width="261dp"
+                android:layout_height="54dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="400dp"
+                android:drawablePadding="20dp"
+                android:layout_centerHorizontal="true"
+                android:hint="Confirm new password"
+                android:inputType="textPassword"
+                android:drawableRight="@drawable/ic_baseline_create_24"/>
 
-        <EditText
-            android:id="@+id/edtpassword"
-            android:layout_width="336dp"
-            android:layout_height="54dp"
-            android:layout_marginTop="40dp"
-            android:drawablePadding="10dp"
-            android:hint="Password old"
-            android:inputType="textPassword" />
+            <Button
+                android:id="@+id/butnback"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="520dp"
+                android:layout_marginBottom="50dp"
+                android:background="@drawable/round_border"
+                android:text="Back"
+                app:backgroundTint="@color/teal_700" />
 
-        <EditText
-            android:id="@+id/edtpassnew"
-            android:layout_width="335dp"
-            android:layout_height="54dp"
-            android:layout_marginTop="40dp"
-            android:drawablePadding="10dp"
-            android:hint="New Password"
-            android:inputType="textPassword" />
+            <Button
+                android:id="@+id/butnchangepass"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginTop="600dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="50dp"
+                android:background="@drawable/round_border"
+                android:text="Change"
+                app:backgroundTint="@color/teal_700" />
 
-        <EditText
-            android:id="@+id/edtpassconfirm"
-            android:layout_width="333dp"
-            android:layout_height="54dp"
-            android:layout_marginTop="40dp"
-            android:drawablePadding="10dp"
-            android:hint="Confirm Password"
-            android:inputType="textPassword" />
 
-        <Button
-            android:id="@+id/btnconfirm"
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/round_border"
-            android:text="Confirm"
-            app:backgroundTint="#2196F3" />
+        </RelativeLayout>
+
+
     </LinearLayout>
-</LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/white">
+        <include layout ="@layout/main_nav_drawer"/>
+    </RelativeLayout>
+
+</androidx.drawerlayout.widget.DrawerLayout>
