--- a/BaiTap/app/src/main/res/layout/activity_login.xml
+++ b/BaiTap/app/src/main/res/layout/activity_login.xml
@@ -45,14 +45,15 @@
         android:background="@drawable/round_border"
         android:text="LOGIN"
         app:backgroundTint="#2196F3" />
-
-    <TextView
-        android:id="@+id/tvchangepass"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/butnhome"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="Change password"
-        android:textSize="18dp" />
+        android:background="@drawable/round_border"
+        android:text="HOME"
+        app:backgroundTint="#2196F3" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
