--- a/BaiTap/app/src/main/res/layout/activity_signup.xml
+++ b/BaiTap/app/src/main/res/layout/activity_signup.xml
@@ -59,11 +59,19 @@
 
     <Button
         android:id="@+id/butndangki"
-        android:layout_width="162dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:background="@drawable/round_border"
         android:text="SIGN UP"
+        app:backgroundTint="@android:color/holo_blue_dark" />
+    <Button
+        android:id="@+id/butnSingin"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/round_border"
+        android:text="sign in"
         app:backgroundTint="@android:color/holo_blue_dark" />
 
 
