--- a/BaiTap/app/src/main/res/layout/cart_item.xml
+++ b/BaiTap/app/src/main/res/layout/cart_item.xml
@@ -13,6 +13,7 @@
         android:src="@drawable/ic_shopping_cart">
     </ImageView>
    <LinearLayout
+       android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">
@@ -42,6 +43,7 @@
             android:layout_height="30dp"
             android:src="@drawable/ic_recycle_bin"
             android:backgroundTint="@color/white"
+            android:focusable="false"
             android:id="@+id/delete"/>
     </RelativeLayout>
 
